pyinterp/pyinterp/pyinterp/tests/must_pass/builtins/list/errors/pop_out_of_range2.py
lst = [1]
lst.pop(1)